# sqlops-hackmeta

./: .gitignore  Dockerfile  README.md  __init__.py  inference.py  manifest.json  models.py  openenv.yaml  pyproject.toml  requirements.txt  sw.js  test_smoke.py  upload_to_hf.py
docs/: project_overview.html
server/: __init__.py  app.py  auth.py  database.py  environment.py  graders.py  tasks.py
server/static/: boss.html  login.html  report.html  staff.html
server/static/css/: global.css
server/static/js/: 4d-engine.js  analysis.js  charts.js
